# Dystrail

./: .deployment-info  .gitignore  .releaserc.json  404.html  AGENT.md  AGENTS.md  ASSETS.md  CNAME  Cargo.toml  DYSTRAIL_WEBUX_SPEC.md  ENGINE_JOURNEY_CONTROLLER_DIFF.md  ENGINE_KERNEL_PSEUDOCODE_DYSTRAIL_PARITY.md  ENGINE_OVERHAUL_CHECKLIST.md  ENGINE_SYSTEMS_SPEC_DYSTRAIL_PARITY.md  Justfile  KERNEL_CLEAUP.md  PLAY_TEST.md  PRD_DYSTRAIL_COMMON_PARITY.md  PROJECT_PLAN.md  README.md  UX_SCREENS.md  audit.toml  book.toml  codealike.json  deny.toml  index.html  package-lock.json  package.json  print.html  searcher-c2a407aa.js  searchindex-b2467cc6.js  toc-cc8bcbef.js  toc.html
dystrail-game/: .tarpaulin.toml  Cargo.toml
dystrail-game/src/: boss.rs  camp.rs  constants.rs  coverage_anchor.rs  crossings.rs  data.rs  day_accounting.rs  disease.rs  encounters.rs  endgame.rs  exec_orders.rs  hunt.rs  lib.rs  numbers.rs  otdeluxe_crossings.rs  otdeluxe_random_events.rs  otdeluxe_score.rs  otdeluxe_state.rs  otdeluxe_store.rs  otdeluxe_trail.rs  pacing.rs  personas.rs  result.rs  seed.rs  state.rs  store.rs  trade.rs  vehicle.rs  weather.rs
dystrail-game/src/crossings/: resolver.rs
dystrail-game/src/journey/: daily.rs  event.rs  kernel.rs  mod.rs  phase.rs  session.rs
dystrail-game/src/kernel/: mod.rs  session.rs  types.rs
dystrail-game/src/kernel/events/: ids.rs  mod.rs  payload.rs  trace.rs
dystrail-game/src/kernel/phases/: mod.rs
dystrail-game/src/kernel/systems/: affliction.rs  dalles.rs  disease.rs  economy.rs  fatality.rs  health.rs  mod.rs  navigation.rs  party.rs  random_events.rs  supplies.rs  travel.rs  vehicle.rs
dystrail-game/src/mechanics/: mod.rs  otdeluxe90s.rs
dystrail-game/tests/: coverage_sweep.rs  data_shapes.rs  full_campaign.rs  stat_acceptance.rs  system_coverage.rs  weather_paths.rs
dystrail-tester/: Cargo.toml  README.md
dystrail-tester/config/: example.toml
dystrail-tester/src/: game_tester.rs  import_test.rs  logic.rs  main.rs  reports.rs  scenarios.rs
dystrail-tester/src/browser/: bridge.rs  mod.rs  session.rs
dystrail-tester/src/common/: mod.rs  reports.rs  scenarios.rs  util.rs
dystrail-tester/src/common/scenario/: catalog.rs  full_game.rs  mod.rs  playability.rs  smoke.rs
dystrail-tester/src/logic/: game_tester.rs  mod.rs  playability.rs  policy.rs  reports.rs  seeds.rs  simulation.rs  tester.rs
dystrail-tester/src/scenario/: mod.rs  smoke.rs
dystrail-tester/tests/: cli.rs  game_coverage.rs
dystrail-web/: Cargo.toml  index.html  package-lock.json  package.json  playwright.config.ts
dystrail-web/i18n/: ar.json  bn.json  de.json  en.json  es.json  fr.json  hi.json  id.json  it.json  ja.json  jv.json  ko.json  mr.json  pa.json  pt.json  ru.json  ta.json  te.json  tr.json  zh.json
dystrail-web/src/: a11y.rs  app.rs  dom.rs  game.rs  i18n.rs  i18n_coverage_tests.rs  i18n_tests.rs  input.rs  lib.rs  paths.rs  router.rs  routes.rs
dystrail-web/src/app/: bootstrap.rs  mod.rs  phase.rs  routing.rs  state.rs
dystrail-web/src/app/test_bridge/: mod.rs  shared.rs  stub.rs  wasm.rs
dystrail-web/src/app/view/: handlers.rs  mod.rs  phases.rs
dystrail-web/src/app/view/handlers/: boss.rs  crossing.rs  mod.rs  outcome.rs  prefs.rs  route_prompt.rs  storage.rs  store.rs  travel.rs
dystrail-web/src/app/view/phases/: about.rs  boss.rs  camp.rs  crossing.rs  encounter.rs  inventory.rs  map.rs  menu.rs  mod.rs  mode_select.rs  outfitting.rs  pace_diet.rs  persona.rs  result.rs  route_prompt.rs  seed_footer.rs  settings.rs  store.rs  travel.rs
dystrail-web/src/components/: button.rs  header.rs  mod.rs  modal.rs
dystrail-web/src/components/daisy_ui/: foundation.rs  mod.rs
dystrail-web/src/components/daisy_ui/atoms/: alert.rs  avatar.rs  badge.rs  button.rs  checkbox.rs  indicator.rs  input.rs  kbd.rs  label.rs  link.rs  loading.rs  mask.rs  mod.rs  progress.rs  radial_progress.rs  radio.rs  range.rs  rating.rs  select.rs  skeleton.rs  status.rs  textarea.rs  toggle.rs
dystrail-web/src/components/daisy_ui/mockups/: mockup_browser.rs  mockup_code.rs  mockup_phone.rs  mockup_window.rs  mod.rs
dystrail-web/src/components/daisy_ui/molecules/: accordion.rs  breadcrumbs.rs  calendar.rs  card.rs  chat.rs  collapse.rs  countdown.rs  diff.rs  divider.rs  dropdown.rs  fab.rs  fieldset.rs  file_input.rs  filter.rs  hover3d.rs  hover_gallery.rs  join.rs  list.rs  menu.rs  mod.rs  stack.rs  stat.rs  steps.rs  swap.rs  tab.rs  text_rotate.rs  tooltip.rs  validator.rs
dystrail-web/src/components/daisy_ui/organisms/: carousel.rs  dock.rs  drawer.rs  footer.rs  hero.rs  mod.rs  modal.rs  navbar.rs  (+5 more)
dystrail-web/src/components/ui/: camp_panel.rs  crossing_card.rs  encounter_card.rs  main_menu.rs  mod.rs  outfitting_store.rs  pace_diet_panel.rs  persona_select.rs  result_screen.rs  save_drawer.rs  seed_footer.rs  settings_dialog.rs  share_code_bar.rs  stats_bar.rs  travel_panel.rs  vehicle_status.rs
dystrail-web/src/game/: boss.rs  camp.rs  crossings.rs  exec_orders.rs  mod.rs  pacing.rs  seed.rs  vehicle.rs
dystrail-web/src/i18n/: bundle.rs  format.rs  locales.rs  mod.rs  render.rs
dystrail-web/src/pages/: about.rs  boot.rs  boss.rs  camp.rs  crossing.rs  encounter.rs  inventory.rs  map.rs  menu.rs  mod.rs  mode_select.rs  not_found.rs  otdeluxe_crossing.rs  otdeluxe_store.rs  outfitting.rs  pace_diet.rs  persona.rs  result.rs  route_prompt.rs  settings.rs  travel.rs
dystrail-web/static/: styles.css
dystrail-web/static/assets/data/: boss.json  camp.json  crossings.json  disease.json  endgame.json  exec_orders.json  game.json  pacing.json  personas.json  result.json  store.json  vehicle.json  weather.json
dystrail-web/tests/: camp_panel_action_tests.rs  component_render_tests.rs  crossing_i18n_tests.rs  daisy_ui_showcase_tests.rs  page_render_tests.rs  phase_crossing_render_tests.rs  props_eq_tests.rs  web_utils_tests.rs
dystrail-web/tests-e2e/: a11y.spec.ts  screens.spec.ts
dystrail-web/tests/wasm/: app_tests.rs  camp_panel_tests.rs  crossing_tests.rs  main_menu_tests.rs  pace_diet_tests.rs  persona_tests.rs  vehicle_tests.rs
(+188 files in other folders)
