[workspace]
members = [
    "dystrail-web",
    "dystrail-tester",
]
resolver = "2"

[workspace.dependencies]
# Web dependencies
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
wasm-bindgen = "0.2.101"
wasm-bindgen-futures = "0.4.51"
gloo = { version = "0.11", features = ["storage", "timers"] }
gloo-net = { version = "0.6.0", features = ["http"] }
web-sys = { version = "0.3.78", features = [
  "Window","Document","Navigator","Clipboard",
  "Element","HtmlElement","NodeList","DomTokenList",
  "HtmlImageElement","HtmlInputElement","HtmlSelectElement","HtmlTextAreaElement"
] }
js-sys = "0.3.78"
console_error_panic_hook = "0.1.7"

# Core dependencies
serde = { version = "1.0.224", features = ["derive"] }
serde_json = "1.0.145"
log = "0.4.28"
regex = "1.11.2"
rand = { version = "0.9.2", default-features = false, features = ["std", "std_rng"] }
rand_chacha = { version = "0.9.0", default-features = false, features = ["std"] }
thiserror = "2.0.16"
anyhow = "1.0.99"
once_cell = "1.21.3"

# Testing dependencies
wasm-bindgen-test = "0.3.51"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
async-trait = "0.1"
thirtyfour = "0.33"
chrono = { version = "0.4", features = ["clock"] }
env_logger = "0.10"
