[workspace]
members = [
    "dystrail-game",
    "dystrail-web",
    "dystrail-tester",
]
resolver = "2"

[workspace.dependencies]
# Web dependencies
yew = { version = "0.21", features = ["csr", "ssr"] }
yew-router = "0.18"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo = { version = "0.11", features = ["storage", "timers"] }
gloo-net = { version = "0.6", features = ["http"] }
web-sys = { version = "0.3", features = [
  "Window","Document","Navigator","Clipboard",
  "Element","HtmlElement","NodeList","DomTokenList",
  "HtmlImageElement","HtmlInputElement","HtmlSelectElement","HtmlTextAreaElement"
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"

# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
regex = "1.11"
rand = { version = "0.9", default-features = false, features = ["std", "std_rng", "small_rng"] }
rand_chacha = { version = "0.9", default-features = false, features = ["std"] }
thiserror = "2.0"
anyhow = "1.0"
once_cell = "1.21"
smallvec = { version = "1.13", features = ["serde"] }
twox-hash = "1.6"

# Testing dependencies
wasm-bindgen-test = "0.3"
tokio = { version = "1.47", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
async-trait = "0.1"
thirtyfour = "0.36"
chrono = { version = "0.4", features = ["clock"] }
env_logger = "0.11"
