[package]
name = "dystrail-game"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Core game logic for Dystrail - platform-agnostic game engine"
repository = "https://github.com/vanna/dystrail"
readme = "../README.md"
keywords = ["dystrail", "game", "simulation", "survival"]
categories = ["games"]
rust-version.workspace = true

[dependencies]
# Core dependencies for game logic
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
smallvec = { workspace = true }
twox-hash = { workspace = true }

# Optional dependencies for specific features
tokio = { workspace = true, optional = true, features = ["macros", "rt"] }

[features]
default = []
async = ["tokio"]
