[package]
name = "dystrail-tester"
version = "0.10.0"
edition = "2024"
license = "MIT"
description = "Automated testing and QA tools for Dystrail game - both pure logic and browser automation"
repository = "https://github.com/vanna/dystrail"
readme = "../README.md"
keywords = ["dystrail", "testing", "qa", "automation"]
categories = ["games"]

[[bin]]
name = "dystrail-tester"
path = "src/main.rs"

[dependencies]
# Game logic testing
dystrail-game = { path = "../dystrail-game" }

# Core dependencies
anyhow = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
colored = { workspace = true }
log = { workspace = true }
env_logger = "0.11"

# Pure logic testing
rand = { workspace = true }
rand_chacha = { workspace = true }
regex = { workspace = true }
sha2 = { workspace = true }

# Browser automation
thirtyfour = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
twox-hash = { workspace = true }
