[package]
name = "dystrail-web"
version = "0.10.0"
edition = "2024"
license = "MIT"
description = "Dystrail - A satirical SNES-inspired survival game"
repository = "https://github.com/vanna/dystrail"
readme = "../README.md"
keywords = ["dystrail", "game", "wasm", "web"]
categories = ["games"]

[lib]
name = "dystrail_web"
crate-type = ["cdylib", "rlib"]

[dependencies]
dystrail-game = { path = "../dystrail-game" }
yew = { workspace = true }
yew-router = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
gloo = { workspace = true }
gloo-net = { workspace = true }
web-sys = { workspace = true }
js-sys = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
console_error_panic_hook = { workspace = true, optional = true }
log = { workspace = true }
regex = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
once_cell = { workspace = true }

[features]
default = ["console_error_panic_hook"]

[dev-dependencies]
wasm-bindgen-test = { workspace = true }
